-- Create notifications table
create table if not exists public.notifications (
  id bigint generated by default as identity primary key,
  user_id uuid references public.profiles(id) on delete cascade not null,
  type text not null check (type in ('like', 'collect', 'comment', 'follow')),
  source_id bigint, -- ID from interactions, comments, or follows table
  is_read boolean default false,
  created_at timestamp with time zone default timezone('utc'::text, now()) not null
);

-- Enable RLS
alter table public.notifications enable row level security;

-- Policies
create policy "Users can view their own notifications" on public.notifications
  for select using (auth.uid() = user_id);

create policy "Users can update their own notifications" on public.notifications
  for update using (auth.uid() = user_id);

-- Triggers to auto-create notifications

-- 1. Trigger for Comments
create or replace function public.handle_new_comment()
returns trigger as $$
begin
  -- Notify post owner
  insert into public.notifications (user_id, type, source_id, created_at)
  select user_id, 'comment', new.id, new.created_at
  from public.posts
  where id = new.post_id
  and user_id != new.user_id; -- Don't notify self
  
  -- Notify parent comment owner (if reply)
  if new.parent_id is not null then
    insert into public.notifications (user_id, type, source_id, created_at)
    select user_id, 'comment', new.id, new.created_at
    from public.comments
    where id = new.parent_id
    and user_id != new.user_id -- Don't notify self
    and user_id != (select user_id from public.posts where id = new.post_id); -- Don't double notify if post owner is same
  end if;
  
  return new;
end;
$$ language plpgsql security definer;

create trigger on_comment_created
  after insert on public.comments
  for each row execute procedure public.handle_new_comment();

-- 2. Trigger for Interactions (Likes/Collects)
create or replace function public.handle_new_interaction()
returns trigger as $$
begin
  if new.type in ('like', 'collect') then
    if new.comment_id is not null then
       -- Comment Like
       insert into public.notifications (user_id, type, source_id, created_at)
       select user_id, new.type, new.id, new.created_at
       from public.comments
       where id = new.comment_id
       and user_id != new.user_id;
    elsif new.post_id is not null then
       -- Post Like/Collect
       insert into public.notifications (user_id, type, source_id, created_at)
       select user_id, new.type, new.id, new.created_at
       from public.posts
       where id = new.post_id
       and user_id != new.user_id;
    end if;
  end if;
  return new;
end;
$$ language plpgsql security definer;

create trigger on_interaction_created
  after insert on public.interactions
  for each row execute procedure public.handle_new_interaction();

-- 3. Trigger for Follows
create or replace function public.handle_new_follow()
returns trigger as $$
begin
  insert into public.notifications (user_id, type, source_id, created_at)
  values (new.following_id, 'follow', new.id, new.created_at);
  return new;
end;
$$ language plpgsql security definer;

create trigger on_follow_created
  after insert on public.follows
  for each row execute procedure public.handle_new_follow();
