erDiagram
    %% ==================== 用户管理模块 ====================
    "auth.users" ||--o| profiles : "1:1 扩展"
    profiles ||--o{ follows : "关注"
    profiles ||--o{ follows : "被关注"
    profiles ||--o{ follows_history : "记录"
    profiles ||--o{ notifications : "接收"
    profiles ||--o{ posts : "发布"
    profiles ||--o{ comments : "发表"
    profiles ||--o{ interactions : "操作"
    profiles ||--o{ "train_orders" : "订购"
    profiles ||--o{ "assistant_sessions" : "发起"

    %% ==================== 内容社区模块 ====================
    posts ||--o{ comments : "包含"
    posts ||--o{ interactions : "被互动"
    comments ||--o{ comments : "回复"

    %% ==================== 火车票务模块 ====================
    "train_stations" ||--o{ trains : "发车"
    trains ||--o{ "train_orders" : "生成"

    %% ==================== AI助手模块 ====================
    "assistant_sessions" ||--o{ "assistant_messages" : "包含"

    %% ==================== 用户实体 ====================
    profiles {
        uuid id PK "用户ID"
        text username "用户名"
        text avatar_url "头像URL"
        text bio "个人简介"
        text role "角色"
        timestamp updated_at "更新时间"
    }

    "auth.users" {
        uuid id PK "用户ID"
        text email "邮箱"
        timestamp created_at "创建时间"
    }

    %% ==================== 帖子实体 ====================
    posts {
        bigint id PK "帖子ID"
        uuid user_id FK "发布者ID"
        text title "标题"
        text content "正文"
        text type "类型(video/image/article)"
        text[] media_urls "媒体URL数组"
        timestamp created_at "创建时间"
    }

    %% ==================== 评论实体 ====================
    comments {
        bigint id PK "评论ID"
        bigint post_id FK "所属帖子ID"
        uuid user_id FK "评论者ID"
        bigint parent_id FK "父评论ID"
        text content "评论内容"
        timestamp created_at "创建时间"
    }

    %% ==================== 互动实体 ====================
    interactions {
        bigint id PK "互动ID"
        uuid user_id FK "用户ID"
        bigint post_id FK "帖子ID"
        text type "类型(like/collect/share/view)"
        timestamp created_at "创建时间"
    }

    %% ==================== 关注实体 ====================
    follows {
        bigint id PK "记录ID"
        uuid follower_id FK "关注者ID"
        uuid following_id FK "被关注者ID"
        timestamp created_at "关注时间"
    }

    follows_history {
        uuid id PK "记录ID"
        uuid follower_id FK "关注者ID"
        uuid following_id FK "被关注者ID"
        text event_type "事件类型(follow/unfollow)"
        timestamp created_at "发生时间"
    }

    %% ==================== 通知实体 ====================
    notifications {
        bigint id PK "通知ID"
        uuid user_id FK "接收用户ID"
        text type "通知类型"
        bigint source_id "来源ID"
        boolean is_read "已读标记"
        timestamp created_at "创建时间"
    }

    %% ==================== 火车票务实体 ====================
    trains {
        uuid id PK "记录ID"
        text train_num "车次号"
        text from_station "出发站"
        text to_station "到达站"
        time start_time "出发时间"
        time end_time "到达时间"
        text duration "历时"
        timestamp created_at "创建时间"
    }

    "train_stations" {
        uuid id PK "记录ID"
        text name "城市/车站名称"
        text code "车站代码"
        timestamp created_at "创建时间"
    }

    "train_orders" {
        uuid id PK "订单ID"
        uuid user_id FK "用户ID"
        text train_num "车次号"
        text from_station "出发站"
        text to_station "到达站"
        date departure_date "出发日期"
        time departure_time "出发时间"
        time arrival_time "到达时间"
        text seat_type "座位类型"
        text passenger_name "乘客姓名"
        text passenger_id_card "乘客身份证"
        text status "订单状态"
        numeric price "价格"
        timestamp created_at "创建时间"
    }

    %% ==================== AI助手实体 ====================
    "assistant_sessions" {
        uuid id PK "会话ID"
        uuid user_id FK "用户ID"
        text title "会话标题"
        timestamp created_at "创建时间"
        timestamp updated_at "更新时间"
    }

    "assistant_messages" {
        bigint id PK "消息ID"
        uuid session_id FK "所属会话ID"
        text role "角色(user/assistant)"
        text content "消息内容"
        text image_url "图片URL"
        integer latency "响应延迟(ms)"
        timestamp created_at "创建时间"
    }

    %% ==================== 知识库实体 ====================
    knowledge_base {
        bigint id PK "记录ID"
        text content "知识内容"
        jsonb metadata "元数据"
        vector embedding "向量嵌入(1024维)"
        timestamp created_at "创建时间"
    }

    %% ==================== 管理配置实体 ====================
    api_providers {
        uuid id PK "供应商ID"
        text name "供应商名称"
        text base_url "API地址"
        text api_key "API密钥"
        text capability "能力描述"
        integer priority "优先级"
        jsonb config "配置信息"
        boolean active "是否启用"
        timestamp created_at "创建时间"
    }

    "data_sources" {
        uuid id PK "数据源ID"
        text name "数据源名称"
        text type "数据类型"
        jsonb config "连接配置"
        timestamp created_at "创建时间"
    }
